# inav-claude

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  opencode.json  telemetry-id
.claude/: TOOL-LOCATIONS.md  settings.json
.claude/agents/: CLAUDE.md  aerodynamics-expert.md  check-pr-bots.md  create-agent.md  email-manager.md  fc-flasher.md  inav-architecture.md  inav-builder.md  inav-code-review.md  msp-expert.md  permissions-manager.md  settings-lookup.md  sitl-operator.md  target-developer.md  test-engineer.md
.claude/hooks/: ARCHITECTURE.md  CLAUDE_EVALUATOR_GUIDE.md  README.md  UPSTREAM_ISSUE_PROTECTION.md  bash_parser.py  claude_evaluator.py  forget_memory.py  framework-tips.txt  hook_common.py  onboarding-level-0.sh  onboarding-level-1.sh  passive_inject.py  permission_request_hook.py  post_tool_token_logger.py  pre-bash.sh  pre-prompt-inject.sh  pre_tool_use_hook.py  session-start.sh  stop-hook.sh  subagent_hooks.py  tool_permissions.yaml  tool_permissions_bash.yaml  tool_permissions_defaults.yaml  tool_permissions_rules.yaml  validate_config.py
.opencode/: START.md
.opencode/agents/: AGENTS.md  aerodynamics-expert.md  check-pr-bots.md  create-agent.md  email-manager.md  fc-flasher.md  inav-architecture.md  inav-builder.md  inav-code-review.md  (+6 more)
claude/: INSTALL.md  README.md  WORKFLOW-IMPROVEMENT-SUMMARY.md  install.sh  msp_investigation_facts.md  session-state.json
pico_tooling_rp2350/imu_emulator/: CMakeLists.txt  README.md  mpu6000_emu.c
raytools/: check_max_output_ports.sh  closest.sh  dma_resolver_standalone.html  targets.html
(+2420 files in other folders)
